--- a/website/cashier.html
+++ b/website/cashier.html
@@ -12,6 +12,7 @@
             margin-left: auto;
             margin-right: auto;
             }
+            p.double {border-style: double;}
         </style>
     </head>
     <body>
@@ -19,21 +20,19 @@
             font-size: 50px;
             width="900"
             height="400">
+        <button><a href="index.html" class="button">Home</a></button>
+        <button><a href="managerlogin.html" class="button">Manager Login</a></button>
         <h1>CASHIER TRAINING!</h1>
-        <a href="index.html">
-            <button>Home</button></a>
-        <a href="managerlogin.html">
-            <button>Manager Login</button></a>
-        <h2> Transactions! </h2>
+        <h2><u> Transactions! </u></h2>
         <ol start="1">
             <li>Put in YOUR cashier number</li>
             <li>Put in the customers information</li>
             <li>Next, click ticket header</li>
             <li>Here you will scan all of the items. Make sure everything rings up correctly</li>
             <li>Proceed over to the Ticket Payment tab. Select the payment method from the list of options</li>
-            <li>After Payment is complete, had the customer their receipt and products!</li>
+            <li>After Payment is complete, hand the customer their receipt and products!</li>
           </ol>
-        <h2> Refunds! </h2>
+        <h2><u> Refunds! </u></h2>
         <ol start="1">
             <li>Put in YOUR cashier number</li>
             <li>Put in the customers information</li>
@@ -43,7 +42,7 @@
             <li>Chech the receipt to make sure you are refunding the same amount the customer paid and change the saleperson to the cashier on the receipt</li>
             <li>Click Ticket Payment and choose the payment type the customer originally paid with. If they paid with a card, type in the transaction ID on the receipt and the funds will go back automatically</li>
         </ol>
-        <h2> Giftcards! </h2>
+        <h2><u> Giftcards! </u></h2>
         <ol start="1">
             <li>Put in YOUR cashier number</li>
             <li>Put in the customers information</li>
