--- a/website/footscan.html
+++ b/website/footscan.html
@@ -19,12 +19,10 @@
             font-size: 50px;
             width="900"
             height="400">
-            <a href="index.html">
-                <button>Home</button></a>
-            <a href="managerlogin.html">
-            <button>Manager Login</button></a>
+            <button><a href="index.html" class="button">Home</a></button>
+            <button><a href="managerlogin.html" class="button">Manager Login</a></button>
         <h1>FOOT SCANNING TRAINING!</h1>
-        <h2> Scanning! </h2>
+        <h2><u> Scanning! </u></h2>
         <ol start="1">
             <li>Grab a Fleet Feet iPad and log in. The passcode is "123456"</li>
             <li>Locate the volumental tab</li>
