--- a/website/index.html
+++ b/website/index.html
@@ -20,15 +20,12 @@
             width="900"
             height="400">
         <center><h1>WELCOME FLEET FEET TUPELO</h1></center>
-        <center><a href="managerlogin.html">
-            <button>Manager Login</button></center>
+        <center><button><a href="managerlogin.html" class="button">Manager Login</a></button></center>
         </a>
-        <center><h2>Employees... please select the TOPIC you would like to learn about!</h2></center>
+        <center><h2>Employees... please select the <u>TOPIC</u> you would like to learn about!</h2></center>
         <p> </p>
-        <center><a href="cashier.html">Cashier Training!</a></center>
-        <p> </p>
-        <center><a href="footscan.html">Volumental Foot Scanning!</a></center>
-        <p> </p>
-        <center><a href="ecommerace.html">How To Do Ecommerace!</a></center>
+        <center><button><a href="cashier.html" class="button">Cashier Training!</a></button></center> 
+        <center><button><a href="footscan.html" class="button">Volumental Foot Scanning!</a></button></center>
+        <center><button><a href="ecommerace.html" class="button">How To Do Ecommerace!</a></button></center>
     </body>
 </html>
