--- a/website/ecommerace.html
+++ b/website/ecommerace.html
@@ -19,13 +19,11 @@
             font-size: 50px;
             width="900"
             height="400">
-        <h1>ECOMMERACE TRAINING!</h1>
-        <a href="index.html">
-            <button>Home</button></a>
-        <a href="managerlogin.html">
-            <button>Manager Login</button>
+        <button><a href="index.html" class="button">Home</a></button>
+        <button><a href="managerlogin.html" class="button">Manager Login</a></button>
+        <h1>Ecommerace Training!</h1>
         </a>
-        <h2> Shipping An Order! </h2>
+        <h2><u> Shipping An Order! </u></h2>
         <ol start="1">
             <li>On the computer, go to shipstation.com</li>
             <li>Log In with the already set credientals. </li>
